objects/kugo2p__Custom_Payment_Source__c.object
<CustomObject>
    <description>Kugamon - Deprecated object</description>
    <fields>
        <fullName>kugo2p__Account_Lookup_Field__c</fullName>
        <label>Account Lookup Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>kugo2p__Billing_City_Field__c</fullName>
        <label>Billing City Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>kugo2p__Billing_Country_Field__c</fullName>
        <label>Billing Country Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>kugo2p__Billing_Name_Field__c</fullName>
        <label>Billing Name Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>kugo2p__Billing_Postal_Code_Field__c</fullName>
        <label>Billing Postal Code Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>kugo2p__Billing_State_Field__c</fullName>
        <label>Billing State Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>kugo2p__Billing_Street_Field__c</fullName>
        <label>Billing Street Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>kugo2p__Contact_Lookup_Field__c</fullName>
        <label>Contact Lookup Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>kugo2p__Currency_Code_Field__c</fullName>
        <inlineHelpText>Picklist field to map to currency ISO code picklist.</inlineHelpText>
        <label>Currency Code Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>kugo2p__Frequency_Field__c</fullName>
        <label>Frequency Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>kugo2p__Initial_Amount_Field__c</fullName>
        <label>Initial Amount Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>kugo2p__Invoice_Number_Field__c</fullName>
        <label>Invoice Number Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>kugo2p__Object_Prefix__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <inlineHelpText>Three character Salesforce object prefix</inlineHelpText>
        <label>Object Prefix</label>
        <length>3</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>kugo2p__Occurrences_Field__c</fullName>
        <label>Occurrences Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>kugo2p__On_Payment_Completed_Field__c</fullName>
        <inlineHelpText>Field to map to the OPC tag field for one-time payments.</inlineHelpText>
        <label>On Payment Completed Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>kugo2p__Opportunity_Lookup_Field__c</fullName>
        <label>Opportunity Lookup Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>kugo2p__Period_Field__c</fullName>
        <label>Period Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>kugo2p__Profile_Source_Lookup_Field__c</fullName>
        <inlineHelpText>Source object lookup field on the Payment Profile object.</inlineHelpText>
        <label>Profile Source Object Lookup Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>kugo2p__Record_Name_Field__c</fullName>
        <inlineHelpText>Field to copy to the payment or payment profile record name field.</inlineHelpText>
        <label>Record Name Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>kugo2p__Recurring_Amount_Field__c</fullName>
        <label>Recurring Amount Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>kugo2p__Recurring_On_Payment_Completed_Field__c</fullName>
        <inlineHelpText>Field to map to the OPC tag field for recurring payments.</inlineHelpText>
        <label>Recurring On Payment Completed Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>kugo2p__Recurring_Shipping_Amount_Field__c</fullName>
        <label>Recurring Shipping Amount Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>kugo2p__Recurring_Tax_Amount_Field__c</fullName>
        <label>Recurring Tax Amount Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>kugo2p__Shipping_Amount_Field__c</fullName>
        <label>Shipping Amount Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>kugo2p__Shipping_City_Field__c</fullName>
        <label>Shipping City Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>kugo2p__Shipping_Country_Field__c</fullName>
        <label>Shipping Country Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>kugo2p__Shipping_Name_Field__c</fullName>
        <label>Shipping Name Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>kugo2p__Shipping_Postal_Code_Field__c</fullName>
        <label>Shipping Postal Code Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>kugo2p__Shipping_State_Field__c</fullName>
        <label>Shipping State Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>kugo2p__Shipping_Street_Field__c</fullName>
        <label>Shipping Street Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>kugo2p__Source_Lookup_Field__c</fullName>
        <inlineHelpText>Source object lookup field name</inlineHelpText>
        <label>Payment Source Object Lookup Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>kugo2p__Source_Object_Name__c</fullName>
        <inlineHelpText>Name of the object being mapped</inlineHelpText>
        <label>Source Object Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>kugo2p__Start_Date_Field__c</fullName>
        <inlineHelpText>Field to copy to the subscription start date field on payment profiles.</inlineHelpText>
        <label>Start Date Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>kugo2p__Tax_Amount_Field__c</fullName>
        <label>Tax Amount Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>kugo2p__Total_Amount_Field__c</fullName>
        <label>Total Amount Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>kugo2p__Trial_Amount_Field__c</fullName>
        <label>Trial Amount Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>kugo2p__Trial_Frequency_Field__c</fullName>
        <label>Trial Frequency Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>kugo2p__Trial_Occurrences_Field__c</fullName>
        <label>Trial Occurrences Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>kugo2p__Trial_Period_Field__c</fullName>
        <label>Trial Period Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Custom Payment Source</label>
    <listViews>
        <fullName>kugo2p__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Custom Payment Source Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Custom Payment Sources</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>